--- a/style.css
+++ b/style.css
@@ -29,3 +29,14 @@ a:hover{
 color:blue;
   text-decoration: underline;
 } 
+
+
+.bg-slider {
+	width: 100vw;
+	height: 100vh;
+	background-position:center center;
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
